--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             </div>
             <div class="question" id="q2">
                 <p>2. Neither my sister nor my brothers _______ coming to the party.</p>
-                <label><input type="radio" name="q2" value="had"> had</label>
-                <label><input type="radio" name="q2" value="has"> has</label>
+                <label><input type="radio" name="q2" value="is"> is</label>
+                <label><input type="radio" name="q2" value="are"> are</label>
             </div>
             <div class="question" id="q3">
                 <p>3. She ______ her homework every day.</p>
@@ -181,7 +181,7 @@
             // Define correct answers
             const correctAnswers = {
                 q1: 'is',
-                q2: 'has',
+                q2: 'are',
                 q3: 'does',
                 q4: 'have',
                 q5: 'c) The cat does not like water.',
